package com.apromore.compliance_centre.compliancerules.templates.formfields;

import org.springframework.data.repository.CrudRepository;

public interface FormFieldRepository extends CrudRepository<FormFieldModel, Long> {}
