package com.apromore.compliance_centre.compliancerules.templates.formfields;

public enum FormFieldType {
    TEXT,
    COLUMN_BREAK,
    DATA,
    NUMBER,
    CHECK,
    SELECT,
    TIME,
    DURATION,
}
